--- a/app/views/admin/dashboard/index.handlebars
+++ b/app/views/admin/dashboard/index.handlebars
@@ -28,14 +28,14 @@
 
                         <!-- Head -->
                         <div class="head">
-                            <h4>مجموع بازدید کننده</h4>
+                            <h4>مجموع کاربران</h4>
                             <a href="#" class="view"><i class="zmdi zmdi-eye"></i></a>
                         </div>
 
                         <!-- Content -->
                         <div class="content">
                             <h5>امروزه</h5>
-                            <h2>{{ price }}</h2>
+                            <h2>{{ totalUsers }}</h2>
                         </div>
 
                         <!-- Footer -->
@@ -55,14 +55,14 @@
 
                         <!-- Head -->
                         <div class="head">
-                            <h4>محصولات فروخته شده</h4>
+                            <h4>کامنت ها</h4>
                             <a href="#" class="view"><i class="zmdi zmdi-eye"></i></a>
                         </div>
 
                         <!-- Content -->
                         <div class="content">
                             <h5>امروزه</h5>
-                            <h2>85,000.00</h2>
+                            <h2>{{ totalComments }}</h2>
                         </div>
 
                         <!-- Footer -->
@@ -82,14 +82,14 @@
 
                         <!-- Head -->
                         <div class="head">
-                            <h4>سفارش دریافت شد</h4>
+                            <h4>مطالب منتشر شده</h4>
                             <a href="#" class="view"><i class="zmdi zmdi-eye"></i></a>
                         </div>
 
                         <!-- Content -->
                         <div class="content">
                             <h5>امروزه</h5>
-                            <h2>5,000.00</h2>
+                            <h2>{{ totalPosts }}</h2>
                         </div>
 
                         <!-- Footer -->
@@ -109,14 +109,14 @@
 
                         <!-- Head -->
                         <div class="head">
-                            <h4>درآمد کل</h4>
+                            <h4>مجموعه بازدیدها</h4>
                             <a href="#" class="view"><i class="zmdi zmdi-eye"></i></a>
                         </div>
 
                         <!-- Content -->
                         <div class="content">
                             <h5>امروزه</h5>
-                            <h2>3,000,000.00</h2>
+                            <h2>{{ totalViews }}</h2>
                         </div>
 
                         <!-- Footer -->
